objects/Source_System_JuncObj__c.object
<CustomObject>
    <description>Junction Object to relate a deployment to the Source System(s) supporting that deployment</description>
    <fields>
        <fullName>Billing__c</fullName>
        <label>Billing</label>
        <picklist>
            <picklistValues>
                <fullName>In-House</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Outsourced</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Brief_Deployment_Source_System_Descripti__c</fullName>
        <label>Brief Deployment Source System Descripti</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCC_Data_Files__c</fullName>
        <inlineHelpText>Please select the files the member sends using this source system</inlineHelpText>
        <label>Data Files</label>
        <picklist>
            <picklistValues>
                <fullName>Avoidable Days</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Charge Level Data</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consulting Physicians</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Core Measures</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Denials</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ICD9 Procedures</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inpatient Discharges</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OPPE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Data</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Outpatient Charge Level Data</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Outpatient Discharges</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Physician Roster</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <description>Created as part of CR-3053</description>
        <label>Category</label>
        <picklist>
            <picklistValues>
                <fullName>OR System</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Financial Source System</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OR and Financial System</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Housewide</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Materials Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Source System</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BI Reporting System</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GPO Reporting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TAA System</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HR/Payroll System</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ADT System</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Acuity System</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EDIS System</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Orders System</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Claims_Data_Feed_Status__c</fullName>
        <label>Feed Status</label>
        <picklist>
            <picklistValues>
                <fullName>Surveyed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Scheduled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Connected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Parsing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Needs Attention</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inactive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Daily</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Weekly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monthly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BiMonthly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Claims_Transfer_Method__c</fullName>
        <label>Claims Transfer Method</label>
        <picklist>
            <picklistValues>
                <fullName>CDA Agent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CIUploader</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DMV2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SFTP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <description>Created as part of CR-3053</description>
        <label>Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DMV2_User_ID__c</fullName>
        <label>DMV2 User ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deployment__c</fullName>
        <description>Deployment object associated with this Source System Junction Object</description>
        <inlineHelpText>Select Deployment object for association with a Source System</inlineHelpText>
        <label>Deployment</label>
        <referenceTo>Deployment__c</referenceTo>
        <relationshipLabel>Deployment Source Systems</relationshipLabel>
        <relationshipName>Source_System_JuncObjs1</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Extract__c</fullName>
        <description>Created as part of CR-3053</description>
        <label>Extract</label>
        <picklist>
            <picklistValues>
                <fullName>Member</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Compass Connect</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>FIrst_Upload_Date__c</fullName>
        <label>FIrst Upload Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>History__c</fullName>
        <label>History</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Last_Processed_Date__c</fullName>
        <label>Last Processed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Upload_Date__c</fullName>
        <label>Last Upload Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Member_Name__c</fullName>
        <formula>Deployment__r.Project__r.Institution__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Member Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_Providers__c</fullName>
        <label>Number of Providers</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Practice_Name__c</fullName>
        <label>Practice Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Practice_Type__c</fullName>
        <label>Practice Type</label>
        <picklist>
            <picklistValues>
                <fullName>Employed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Independent</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Referencable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Referencable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Software_Name__c</fullName>
        <label>Software Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_System_Product__c</fullName>
        <formula>Source_System__r.Product__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Source System: Program</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_System_Vendor__c</fullName>
        <formula>Source_System__r.Vendor__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Source System: Vendor</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_System__c</fullName>
        <description>Source System</description>
        <label>Source System</label>
        <referenceTo>Source_System__c</referenceTo>
        <relationshipLabel>Deployment Source Systems</relationshipLabel>
        <relationshipName>Source_System_JuncObjs1</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Created as part of CR-3891</description>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Inactive</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Submission_Frequency_Days__c</fullName>
        <label>Submission Frequency (Days)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vendor__c</fullName>
        <label>Vendor</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Version__c</fullName>
        <label>Version</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Deployment Source System</label>
    <nameField>
        <displayFormat>DSSJO-{00000}</displayFormat>
        <label>Deployment Source System Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Deployment Source Systems</pluralLabel>
    <recordTypes>
        <fullName>CCI_Deployment_Source_System</fullName>
        <active>true</active>
        <label>CCI Deployment Source System</label>
    </recordTypes>
    <recordTypes>
        <fullName>Cost_Ops_Deployment_Source_System</fullName>
        <active>true</active>
        <label>Cost Ops Deployment Source System</label>
    </recordTypes>
    <recordTypes>
        <fullName>Master_Record</fullName>
        <active>true</active>
        <label>Master Record</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>